fixed spacing for projects subheading and cards

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -540,6 +540,7 @@ input:invalid:focus{
 .proj-grid-holder{
     display: flex;
     justify-content: center;
+    margin-top: 10px;
 }
 .project_grid{
     display: grid;
